# ol-data-platform

./: .dir-locals.el  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluffignore  AGENTS.md  Dockerfile  LICENSE  README.md  agent-config.toml  build.yaml  catalog.json  dagster.yaml  dimensional_warehouse_todo.md  docker-compose.yaml  graph.gpickle  pants  pants.toml  pyproject.toml  renovate.json  run_results.json  setup.cfg  tasks.py  workspace.yaml
dg_deployment/code_locations/edxorg/: pyproject.toml
dg_deployment/code_locations/edxorg/edxorg/: definitions.py
dg_deployment/code_locations/lakehouse/: COMPLETE.md  pyproject.toml
dg_deployment/code_locations/lakehouse/lakehouse/: definitions.py
dg_deployment/code_locations/learning_resources/: pyproject.toml
dg_deployment/code_locations/legacy_openedx/: COMPLETE.md  pyproject.toml
dg_deployment/code_locations/legacy_openedx/legacy_openedx/: definitions.py
dg_deployment/code_locations/orchestration_platform/: pyproject.toml
dg_deployments/local/: Dockerfile  dagster.yaml  pyproject.toml  workspace.yaml
dg_projects/b2b_organization/: Dockerfile  build.yaml  pyproject.toml
dg_projects/b2b_organization/b2b_organization/: definitions.py
dg_projects/b2b_organization/b2b_organization/assets/: data_export.py  starrocks_mv_refresh.py
dg_projects/b2b_organization/b2b_organization/partitions/: b2b_organization.py
dg_projects/b2b_organization/b2b_organization/resources/: starrocks.py
dg_projects/b2b_organization/b2b_organization/sensors/: b2b_organization.py
dg_projects/canvas/: COMPLETE.md  Dockerfile  build.yaml  pyproject.toml
dg_projects/canvas/canvas/: definitions.py
dg_projects/canvas/canvas/assets/: canvas.py
dg_projects/canvas/canvas/lib/: canvas.py
dg_projects/canvas/canvas/resources/: api_client_factory.py
dg_projects/canvas/canvas/sensors/: canvas.py
dg_projects/data_loading/: AGENTS.md  Dockerfile  build.yaml  pyproject.toml
dg_projects/data_loading/.dlt/: .pyiceberg.yaml  config.toml
dg_projects/data_loading/data_loading/: definitions.py
dg_projects/data_loading/data_loading/defs/: schedules.py
dg_projects/data_loading/data_loading_tests/: test_definitions.py  test_sensor.py  test_translators.py
dg_projects/data_platform/: COMPLETE.md  Dockerfile  IMPLEMENTATION.md  README.md  build.yaml  pyproject.toml
dg_projects/data_platform/data_platform/: definitions.py
dg_projects/data_platform/data_platform/resources/: __init__.py  openmetadata.py
dg_projects/data_platform/data_platform/schedules/: __init__.py  metadata.py
dg_projects/edxorg/: COMPLETE.md  Dockerfile  build.yaml  pyproject.toml
dg_projects/edxorg/edxorg/: definitions.py
dg_projects/edxorg/edxorg/assets/: edxorg_api.py  edxorg_archive.py  edxorg_db_table_specs.py  instructor_onboarding.py  openedx_course_archives.py
dg_projects/edxorg/edxorg/io_managers/: gcs.py
dg_projects/edxorg/edxorg/jobs/: edx_gcs_courses.py  retrieve_edx_exports.py
dg_projects/edxorg/edxorg/lib/: edxorg.py
dg_projects/edxorg/edxorg/ops/: edx_gcs_courses.py  object_storage.py
dg_projects/edxorg/edxorg_tests/: test_edxorg_lib.py
dg_projects/lakehouse/: COMPLETE.md  Dockerfile  REFACTORING_NOTES.md  build.yaml  pyproject.toml
dg_projects/lakehouse/.dlt/: config.toml  secrets.toml.template
dg_projects/lakehouse/docs/: README.md  local_development.md
dg_projects/lakehouse/lakehouse/: definitions.py  sensors.py
dg_projects/lakehouse/lakehouse/assets/: dbt_artifacts.py  iceberg_maintenance.py  instructor_onboarding.py  starrocks_mv_refresh.py  superset.py
dg_projects/lakehouse/lakehouse/lib/: starrocks_dbt.py
dg_projects/lakehouse/lakehouse/resources/: airbyte.py  dbt_s3_artifacts.py  starrocks.py  superset_api.py
dg_projects/lakehouse/lakehouse_tests/: test_starrocks_dbt.py
dg_projects/lakehouse/scripts/: dlt_env.py  test_edxorg_import.py
dg_projects/learning_resources/: COMPLETE.md  CONTRIBUTING.md  Dockerfile  build.yaml  pyproject.toml  test_youtube_config.yml
dg_projects/learning_resources/learning_resources/: definitions.py
dg_projects/learning_resources/learning_resources/assets/: mit_climate.py  mit_edx_programs.py  mitpe.py  open_learning_library.py  ovs_videos.py  sloan_api.py  video_shorts.py  youtube_shorts.py
dg_projects/learning_resources/learning_resources_tests/: test_video_shorts_sensor.py
dg_projects/legacy_openedx/: Dockerfile  build.yaml  pyproject.toml
dg_projects/legacy_openedx/legacy_openedx/: definitions.py
dg_projects/legacy_openedx/legacy_openedx/jobs/: open_edx.py  (+1 more)
dg_projects/openedx/: COMPLETE.md  Dockerfile  REFACTORING_SUMMARY.md  build.yaml  pyproject.toml
dg_projects/openedx/openedx/: definitions.py
dg_projects/student_risk_probability/: Dockerfile  build.yaml  pyproject.toml
dg_projects/student_risk_probability/student_risk_probability/: definitions.py
src/ol_dbt_cli/: pyproject.toml
src/ol_dbt_cli/ol_dbt_cli/: cli.py
src/ol_dbt_cli/tests/: test_diff.py  test_dimensional_layering.py  test_generate.py  test_git_utils.py  test_impact.py  test_local_dev.py  test_manifest.py  test_run.py  test_sql_parser.py  test_starrocks.py  test_validate.py  test_yaml_registry.py
src/ol_dlt/: README.md  edxorg_table_data.py  pyproject.toml
src/ol_dlt/.dlt/: .pyiceberg.yaml  config.toml  secrets.toml.template
src/ol_dlt/ol_dlt/: __init__.py  config.py  database.py  vault.py
src/ol_dlt/tests/: conftest.py  test_config.py  test_database.py  test_vault.py
src/ol_superset/: .exportignore  .gitignore  Dockerfile  README.md  WORKFLOWS.md  pyproject.toml  sync_config.yml
src/ol_superset/.sup/: state.yml
src/ol_superset/assets/: metadata.yaml
src/ol_superset/ol_superset/: __init__.py  cli.py
src/ol_superset/policies/: ol_rls_policies.json
src/ol_superset/scripts/: README.md  export_all.sh  export_from_qa.sh  map_database_uuids.py  promote_to_production.sh  sync_assets.sh  validate_assets.sh
src/ol_superset/tests/: test_asset_index.py  test_dbt_registry.py  test_export_ignore.py  test_impact.py  test_roles.py  test_validate.py
(+3179 files in other folders)
