[project]
name = "ol_data_platform_local"
requires-python = ">=3.14,<3.15"
version = "0.1.0"
dependencies = [
  "dagster~=1.13.0",
  "dagster-webserver",
  "dagster-postgres",
  "psycopg2-binary",
  "dagster-aws",
  "dagster-dg-cli",
]

[tool.dg]
directory_type = "deployment"

# Pin grpcio-health-checking below 1.82.0: that release bundles health_pb2.py
# pre-generated with protobuf 7.35.0 gencode while declaring protobuf>=6.33.5,
# so it crashes at import time under dagster's required protobuf<7 (upstream
# metadata/gencode mismatch in the 1.82.0 release).
[tool.uv]
override-dependencies = [
    "grpcio-health-checking<1.82.0",
]
