[project]
name = "b2b_organization"
requires-python = ">=3.14,<3.15"
version = "0.1.0"
dependencies = [
    "dagster>=1.12.10",
    "dagster-dbt ~=0.29.0",
    "dagster-aws ~=0.29.0",
    "dagster-k8s>=0.27.15",
    "dagster-postgres>=0.27.13",
    "httpx2 >= 2.2.0",
    "ol-orchestrate-lib",
    "pymysql ~= 1.1",
]

[project.entry-points]
"dagster.components" = { b2b_organization = "b2b_organization.lib"}

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.12.10",
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "b2b_organization.definitions"
project_name = "b2b_organization"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "b2b_organization"

[tool.setuptools.packages.find]
exclude=["b2b_organization_tests"]

[tool.uv.sources]
ol-orchestrate-lib = { path = "../../packages/ol-orchestrate-lib", editable = true }

# Pin grpcio-health-checking below 1.82.0: that release bundles health_pb2.py
# pre-generated with protobuf 7.35.0 gencode while declaring protobuf>=6.33.5,
# so it crashes at import time under dagster's required protobuf<7 (upstream
# metadata/gencode mismatch in the 1.82.0 release).
[tool.uv]
override-dependencies = [
    "grpcio-health-checking<1.82.0",
]
