[project]
name = "data-loading"
requires-python = ">=3.13,<3.15"
version = "0.1.0"
dependencies = [
    "dagster>=1.11.12",
    "dagster-aws ~=0.29.0",
    "dagster-dlt>=0.28.0",
    "dagster-k8s>=0.27.15",
    "dagster-postgres>=0.27.13",
    # dlt, pyiceberg, and duckdb are inherited transitively via ol-dlt so there
    # is a single resolved version across the image (no two-manifest drift).
    "ol-dlt",
    "ol-orchestrate-lib",
    "sqlalchemy>=2.0.46",
]

[project.entry-points]
"dagster_dg_cli.registry_modules" = { data_loading = "data_loading.components"}

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.11.12",
    "dagster-webserver",
    "pytest>=9.0.1,<10",
]

[tool.pytest.ini_options]
testpaths = ["data_loading_tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "data_loading.definitions"
project_name = "data_loading"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "data_loading"
code_location_target_module = "data_loading.definitions"

[tool.setuptools.packages.find]
exclude=["data_loading_tests"]

[tool.uv.sources]
ol-dlt = { path = "../../src/ol_dlt", editable = true }
ol-orchestrate-lib = { path = "../../packages/ol-orchestrate-lib", editable = true }

# Pin grpcio-health-checking below 1.82.0: that release bundles health_pb2.py
# pre-generated with protobuf 7.35.0 gencode while declaring protobuf>=6.33.5,
# so it crashes at import time under dagster's required protobuf<7 (upstream
# metadata/gencode mismatch in the 1.82.0 release).
[tool.uv]
override-dependencies = [
    "grpcio-health-checking<1.82.0",
]
