[project]
name = "lakehouse"
requires-python = ">=3.13,<3.14"
version = "0.1.0"
dependencies = [
    "dagster>=1.12.10",
    "dagster-airbyte ~=0.29.0",
    "dagster-dbt ~=0.29.0",
    "dagster-k8s>=0.27.15",
    "dagster-postgres>=0.27.13",
    "dbt-duckdb >=1.10.0",
    "dbt-starrocks>=1.9.0",
    "dbt-trino >=1.10.0",
    "httpx2 >= 2.2.0",
    "ol-orchestrate-lib",
    "pygithub>=2.8.1",
    "pyiceberg>=0.8.0",
    "pymysql ~= 1.1",
]

[project.entry-points]
"dagster.components" = { lakehouse = "lakehouse.lib"}

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.12.10",
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "lakehouse.definitions"
project_name = "lakehouse"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "lakehouse"

[tool.setuptools.packages.find]
exclude=["lakehouse_tests"]

[tool.uv.sources]
ol-orchestrate-lib = { path = "../../packages/ol-orchestrate-lib", editable = true }

# Pin grpcio-health-checking below 1.82.0: that release bundles health_pb2.py
# pre-generated with protobuf 7.35.0 gencode while declaring protobuf>=6.33.5,
# so it crashes at import time under dagster's required protobuf<7 (upstream
# metadata/gencode mismatch in the 1.82.0 release).
[tool.uv]
override-dependencies = [
    "grpcio-health-checking<1.82.0",
]
