[project]
name = "student_risk_probability"
requires-python = ">=3.14,<3.15"
version = "0.1.0"
dependencies = [
    "dagster>=1.12.10",
    "dagster-dbt ~=0.29.0",
    "dagster-aws ~=0.29.0",
    "dagster-k8s>=0.27.15",
    "dagster-postgres>=0.27.13",
    "dagster-iceberg>=0.3.8",
    "httpx ~= 0.28.0",
    "scikit-learn>=1.2.2",
    "ol-orchestrate-lib",
    "polars<1.42",
]

[project.entry-points]
"dagster.components" = { student_risk_probability = "student_risk_probability.lib"}

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.12.10",
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "student_risk_probability.definitions"
project_name = "student_risk_probability"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "student_risk_probability"

[tool.setuptools.packages.find]
exclude=["student_risk_probability_tests"]

[tool.uv.sources]
ol-orchestrate-lib = { path = "../../packages/ol-orchestrate-lib", editable = true }

# Override dagster-iceberg's <0.11 upper bound until upstream loosens it.
# See https://github.com/dagster-io/community-integrations/pull/289
[tool.uv]
override-dependencies = [
    "pyiceberg>=0.11.1",
]
